RESOLVED FIXED272513
GraphicsContextGL::bindExternalImage cannot unbind images
https://bugs.webkit.org/show_bug.cgi?id=272513
Summary GraphicsContextGL::bindExternalImage cannot unbind images
Kimmo Kinnunen
Reported 2024-04-11 01:35:31 PDT
GraphicsContextGL::bindExternalImage cannot unbind images
Attachments
Radar WebKit Bug Importer
Comment 1 2024-04-11 01:36:12 PDT
Kimmo Kinnunen
Comment 2 2024-04-11 01:42:55 PDT
EWS
Comment 3 2024-04-11 05:21:24 PDT
Committed 277377@main (b19fbf77a19e): <https://commits.webkit.org/277377@main> Reviewed commits have been landed. Closing PR #27136 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.