GraphicsContextGL::bindExternalImage cannot unbind images https://bugs.webkit.org/show_bug.cgi?id=272513 rdar://126260668

Reviewed by Dan Glastonbury.

Support unbinding ExternalImage. Currently not used but might be in
the future.

Make sure ExternalSync, ExternalImage objects create errors when using
0.

When destroying any GraphicsContextGL object, follow the GL logic
ignoring calls to destroy name 0.

Avoid expected-to-fail lookup 0 -> 0 in Remote implementations
for clarity.

* Source/WebCore/platform/graphics/angle/GraphicsContextGLANGLE.cpp:
(WebCore::GraphicsContextGLANGLE::deleteExternalImage):
(WebCore::GraphicsContextGLANGLE::deleteExternalSync):
(WebCore::GraphicsContextGLANGLE::clientWaitExternalSyncWithFlush):
* Source/WebCore/platform/graphics/cocoa/GraphicsContextGLCocoa.mm:
(WebCore::GraphicsContextGLCocoa::bindExternalImage):
* Source/WebKit/GPUProcess/graphics/RemoteGraphicsContextGLFunctionsGenerated.h:
(attachShader):
(bindAttribLocation):
(bindBuffer):
(bindFramebuffer):
(bindRenderbuffer):
(bindTexture):
(compileShader):
(deleteBuffer):
(deleteFramebuffer):
(deleteProgram):
(deleteRenderbuffer):
(deleteShader):
(deleteTexture):
(detachShader):
(framebufferRenderbuffer):
(framebufferTexture2D):
(getActiveAttrib):
(getActiveUniform):
(getAttribLocation):
(getProgrami):
(getProgramInfoLog):
(getShaderi):
(getShaderInfoLog):
(getShaderSource):
(getUniformfv):
(getUniformiv):
(getUniformuiv):
(getUniformLocation):
(isBuffer):
(isFramebuffer):
(isProgram):
(isRenderbuffer):
(isShader):
(isTexture):
(linkProgram):
(shaderSource):
(useProgram):
(validateProgram):
(deleteVertexArray):
(isVertexArray):
(bindVertexArray):
(framebufferTextureLayer):
(getFragDataLocation):
(deleteQuery):
(isQuery):
(beginQuery):
(getQueryObjectui):
(deleteSampler):
(isSampler):
(bindSampler):
(samplerParameteri):
(samplerParameterf):
(getSamplerParameterf):
(getSamplerParameteri):
(deleteTransformFeedback):
(isTransformFeedback):
(bindTransformFeedback):
(transformFeedbackVaryings):
(getTransformFeedbackVarying):
(bindBufferBase):
(bindBufferRange):
(getUniformIndices):
(getActiveUniforms):
(getUniformBlockIndex):
(getActiveUniformBlockName):
(uniformBlockBinding):
(getActiveUniformBlockiv):
(getTranslatedShaderSourceANGLE):
(deleteQueryEXT):
(isQueryEXT):
(beginQueryEXT):
(queryCounterEXT):
(getQueryObjectiEXT):
(getQueryObjectui64EXT):
(deleteExternalImage):
(bindExternalImage):
(deleteExternalSync):
(clientWaitExternalSyncWithFlush):
* Tools/Scripts/generate-gpup-webgl:
(webkit_ipc_cpp_impl.process_in_arg):

Canonical link: https://commits.webkit.org/277377@main